# ToDo_List

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
frontend/src/: App.js
todos/: serializers.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py
