[tool.poetry]
name = "td_list"
version = "1.0"
description = "ToDo_List write on DRF and React"
authors = ["DeSiReLeSsOn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
